# cellular-automaton-traffic-simulation

./: .gitignore  Cargo.toml  README.md  example.yaml
.github/workflows/: rust_release.yml  rust_test.yml
benchmarks/: adapter.py  density_dilly_dally.py  dilly_dally.py  max_speed.py  max_speed_traffic_density.py  plot_helper.py  simulations_rounds.py  traffic_density.py
benchmarks/benchmark_results/: README.md
simulations/: multilane_example.yaml  task1.yaml  task2.yaml  vanilla_example.yaml
src/: car.rs  cell.rs  flip_flop.rs  image_drawer.rs  main.rs  road.rs
